# fintech-ai-sparks

./: .gitignore  FIXES_APPLIED.md  PLATFORM_TESTING_SUMMARY.md  TEST_REPORT.md  readme.md  test_platform.py  validate_platform.py
day-01-demand-forcasting/: readme.md
day-01-demand-forecasting/: Dockerfile  app.py  readme.md  requirements.txt
day-02-portfolio-risk-analytics-platform/: Dockerfile  TROUBLESHOOTING.md  app.py  app_fixed.py  docker-test.sh  monte_carlo.py  portfolio_optimizer.py  readme.md  (+2 more)
day-04-mcp-financial-intelligence/: Dockerfile  LinkedIn_Article.md  LinkedIn_Article_Enhanced.md  LinkedIn_Post_Short.md  LinkedIn_Post_Visual.md  PLATFORM_OVERVIEW.md  README.md  claude_desktop_config.json  claude_desktop_config_clean.json  claude_desktop_config_final.json  claude_desktop_config_fixed.json  claude_desktop_config_working.json  claude_desktop_direct.py  claude_desktop_final.json  claude_desktop_final.py  claude_desktop_mcp.py  claude_desktop_mcp_fixed.py  claude_desktop_mcp_server.py  claude_desktop_simple.py  claude_desktop_stdio.py  claude_desktop_sync.py  claude_desktop_working.py  config.env.example  demo_mcp_platform.py  docker-compose.yml  mcp_config.yaml  pyproject.toml  requirements.txt  simple_demo.py  simple_integration_test.py  simple_test_results.json  start_platform.sh  test_mcp_integration.py  test_mcp_server.py  test_results.json
day-04-mcp-financial-intelligence/client/: __init__.py  mcp_client.py  streamlit_dashboard.py  streamlit_dashboard_fixed.py
day-04-mcp-financial-intelligence/integration/: __init__.py  day1_connector.py  day2_connector.py  day3_connector.py
day-04-mcp-financial-intelligence/mcp_server/: __init__.py  claude_main.py  claude_main_fixed.py  main.py  main_clean.py  main_fixed.py  server.py  server_fixed.py
day-04-mcp-financial-intelligence/mcp_server/schemas/: __init__.py  intelligence.py  market_data.py  portfolio.py  trading.py
day-04-mcp-financial-intelligence/mcp_server/tools/: __init__.py
day-04-mcp-financial-intelligence/monitoring/: prometheus.yml
day-04-mcp-financial-intelligence/nginx/: nginx.conf
(+61 files in other folders)
