[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-financial-intelligence"
version = "1.0.0"
description = "MCP Financial Intelligence Platform - Unified AI-powered fintech analytics"
authors = [
    {name = "AI Developer", email = "dev@fintech-ai.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "scikit-learn>=1.3.0",
    "yfinance>=0.2.18",
    "scipy>=1.11.0",
    "cvxpy>=1.4.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["mcp", "fintech", "ai", "trading", "portfolio", "risk-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.6.0",
    "black>=23.9.0",
    "isort>=5.12.0"
]

[project.scripts]
mcp-financial-server = "mcp_server.main:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 